# glove-viz

./: .gitignore  PLAN.md  README.md  app.py  extract_subset.py  main.py  pyproject.toml  test_integration.py
data/: glove_subset.txt
src/glove_viz/: __init__.py  analogy.py  loader.py  presets.py  projections.py  similarity.py  wordlist.py
src/glove_viz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
